--- a/backend/pulsus-backend/src/main/resources/application.properties
+++ b/backend/pulsus-backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=pulsus-backend
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pulsusdb
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
