--- a/frontend/pulsus-frontend/package.json
+++ b/frontend/pulsus-frontend/package.json
@@ -16,6 +16,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.2",
     "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
