--- a/frontend/pulsus-frontend/package.json
+++ b/frontend/pulsus-frontend/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
     "axios": "^1.6.8",
+    "cookie-js": "^0.0.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-google-recaptcha": "^2.1.9"
   }
 }
