--- a/backend/pulsus-backend/src/main/resources/application.properties
+++ b/backend/pulsus-backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pulsusdb
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
+
+file.upload-dir=C:\Users\nikita\Desktop\pulsus-project\uploads
