add load profile picture to backend and some fixes

--- a/backend/pulsus-backend/src/main/resources/application.properties
+++ b/backend/pulsus-backend/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
-upload.path=uploads
+upload.path=C:\\Users\\basce\\Desktop\pulsus-project\\frontend\\pulsus-frontend\\public\\uploads
