--- a/backend/pulsus-backend/pom.xml
+++ b/backend/pulsus-backend/pom.xml
@@ -61,7 +61,16 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10</version>
+		</dependency>
+		<dependency>
+			<groupId>com.garmin</groupId>
+			<artifactId>fit</artifactId>
+			<version>[21.120.0,)</version>
+		</dependency>
 	</dependencies>
 
 	<build>
