--- a/frontend/pulsus-frontend/package.json
+++ b/frontend/pulsus-frontend/package.json
@@ -13,13 +13,16 @@
     "axios": "^1.6.8",
     "cookie-js": "^0.0.1",
     "js-cookie": "^3.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "leaflet": "^1.9.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.2",
+    "react-leaflet": "^4.2.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.12",
     "@types/react-google-recaptcha": "^2.1.9"
   }
 }
