--- a/backend/pulsus-backend/src/main/resources/application.properties
+++ b/backend/pulsus-backend/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 upload.path=C:\\Users\\basce\\Desktop\pulsus-project\\frontend\\pulsus-frontend\\public\\uploads
+spring.servlet.multipart.max-file-size=25MB
+spring.servlet.multipart.max-request-size=25MB
