--- a/backend/pulsus-backend/pom.xml
+++ b/backend/pulsus-backend/pom.xml
@@ -71,6 +71,11 @@
 			<artifactId>fit</artifactId>
 			<version>[21.120.0,)</version>
 		</dependency>
+		<dependency>
+			<groupId>com.mapbox.mapboxsdk</groupId>
+			<artifactId>mapbox-sdk-turf</artifactId>
+			<version>5.8.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
