--- a/frontend/pulsus-frontend/package.json
+++ b/frontend/pulsus-frontend/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.12",
-    "@types/react-google-recaptcha": "^2.1.9"
+    "@types/react-google-recaptcha": "^2.1.9",
+    "tailwindcss": "^3.4.3"
   }
 }
