--- a/frontend/pulsus-frontend/package.json
+++ b/frontend/pulsus-frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.23",
     "axios": "^1.6.8",
     "cookie-js": "^0.0.1",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
